add fhir validation workspace prototype
